# login-google-javascript

./: .env  .env.sops.dev.json  .gitignore  .pylintrc  Dockerfile  Dockerfile.base  Dockerfile.cors  Dockerfile.tmp  Dockerfile.tmpl  Makefile  README.md  base.tar  call_local_lambda.sh  docker-compose.yml.tmpl  docker_build_and_push.sh  docker_template.json  iterate.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  terraform_fmt.sh
.github/hooks/: commit_msg.py  post_checkout.py  pre_push.py
.github/workflows/: CI_office_desk_reservation_backend-stg.yml  CI_office_desk_reservation_backend.yml  ci-cd-stg.yml  ci-cd.yml  cron-job-two.yml  cron-job.yml  cron2.yml  delete-push.yml  delete-reservations.yml  deploy-serverless.yml  main.yml  test.yml
desk_reservation/bookings/application/: __init__.py  booking_creator.py  booking_deleter.py  booking_finder.py  booking_getter.py  booking_parking_creator.py  booking_parking_deleter.py  booking_parking_finder.py  booking_parking_updater.py  booking_updater.py  lock_creator.py  lock_deleter.py  (+1 more)
functions/my-service/: .env  handler.js  package-lock.json  package.json  serverless.yml
infrastructure/: AWSECR.tf  ECR.tf  lambda_functions.tf  outputs.tf  variables.tf  version.tf
infrastructure/environment/: main.tf  variables.tf
infrastructure/iam/: lambda-assume-policy.json
infrastructure/prod/: main.tf  modules.tf  output.tf  outputs.tf  version.tf
infrastructure/staging/: main.tf
infrastructure/state/: main.tf
jobs/: index.js  test.js
tests/: conftest.py  utils.py
(+327 files in other folders)
